--- a/setup.cfg
+++ b/setup.cfg
@@ -5,6 +5,6 @@ tag_svn_revision = true
 
 [aliases]
 # A handy alias to build a release (source and egg)
-release = egg_info -RDb "" sdist --formats=zip,gztar,bztar
+release = egg_info -RDb "" sdist --formats=zip,bztar
 # A handy alias to upload a release to pypi
-release_upload = egg_info -RDb "" sdist --formats=zip,gztar,bztar upload
+release_upload = egg_info -RDb "" sdist --formats=zip,bztar upload
