--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [egg_info]
 tag_build = .dev
-tag_date = true
-tag_svn_revision = true
+#tag_date = true
+#tag_svn_revision = true
 
 [aliases]
 # A handy alias to build a release (source and egg)
