--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,4 @@
-include ez_setup.py src/*.h src/*.cpp INSTALL-*.txt
+include ez_setup.py src/*.h src/*.cpp *.rst LICENSE.txt
 graft tests
 graft examples
 prune include
