--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,6 @@
 include ez_setup.py src/*.h src/*.cpp *.rst LICENSE.txt
-graft tests
 graft examples
+graft tests
+recursive-exclude examples *.pyc
+recursive-exclude tests *.pyc
 prune include
