--- a/INSTALL.rst.in
+++ b/INSTALL.rst.in
@@ -96,8 +96,9 @@ platform-specific hints below.
 
 Only if you want to change the Cython source file ``_rtmidi.pyx`` or want to
 recompile ``_rtmidi.cpp`` with a newer Cython version, you'll need to install
-Cython >= 0.17. The ``_rtmidi.cpp`` file in the  source distribution was
-generated with Cython 0.18pre as of 2013-01-14 and Python 2.7.3.
+Cython >= 0.17. The ``_rtmidi.cpp`` file in the current source distribution
+(version %(version)s was generated with Cython %(cython_ver)s as of %(date)s
+and Python %(python_ver)s.
 
 RtMidi (and therefore **python-rtmidi**) supports several low-level MIDI
 libraries on different operating systems. Only one of the available options
