--- a/projects/python-rtmidi/trunk/INSTALL.rst.in
+++ b/projects/python-rtmidi/trunk/INSTALL.rst.in
@@ -97,7 +97,7 @@ platform-specific hints below.
 Only if you want to change the Cython source file ``_rtmidi.pyx`` or want to
 recompile ``_rtmidi.cpp`` with a newer Cython version, you'll need to install
 Cython >= 0.17. The ``_rtmidi.cpp`` file in the current source distribution
-(version %(version)s was generated with Cython %(cython_ver)s as of %(date)s
+(version %(version)s) was generated with Cython %(cython_ver)s as of %(date)s
 and Python %(python_ver)s.
 
 RtMidi (and therefore **python-rtmidi**) supports several low-level MIDI
