--- a/setup.cfg
+++ b/setup.cfg
@@ -5,6 +5,9 @@ tag_build = .dev
 
 [aliases]
 # A handy alias to build a release (source and egg)
-release = egg_info -RDb "" sdist --formats=zip,gztar,bztar
+release = build filltmpl egg_info -RDb "" sdist --formats=zip,gztar,bztar
 # A handy alias to upload a release to pypi
-release_upload = egg_info -RDb "" sdist --formats=zip,gztar,bztar upload
+release_upload = build filltmpl egg_info -RDb "" sdist --formats=zip,gztar,bztar upload
+
+[filltmpl]
+templates = INSTALL.rst.in
