--- a/projects/python-rtmidi/trunk/MANIFEST.in
+++ b/projects/python-rtmidi/trunk/MANIFEST.in
@@ -1,5 +1,5 @@
 include ez_setup.py src/*.h src/*.cpp *.rst LICENSE.txt
-exclude *.rst.in
+exclude *.rst.in deploy.sh
 graft examples
 graft tests
 recursive-exclude examples *.pyc
