--- a/projects/python-rtmidi/trunk/MANIFEST.in
+++ b/projects/python-rtmidi/trunk/MANIFEST.in
@@ -1,4 +1,4 @@
-include ez_setup.py src/*.h src/*.cpp *.rst LICENSE.txt
+include ez_setup.py fill_template.py src/*.h src/*.cpp *.rst LICENSE.txt
 exclude *.rst.in deploy.sh
 graft examples
 graft tests
