Add missing `fill_template.py` to source dists and revert r970

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,4 @@
-include ez_setup.py src/*.h src/*.cpp *.rst LICENSE.txt
+include ez_setup.py fill_template.py src/*.h src/*.cpp *.rst LICENSE.txt
 exclude *.rst.in deploy.sh
 graft examples
 graft tests
