--- a/projects/python-rtmidi/trunk/INSTALL.rst.in
+++ b/projects/python-rtmidi/trunk/INSTALL.rst.in
@@ -105,7 +105,7 @@ platform-specific hints below.
 Only if you want to change the Cython source file ``_rtmidi.pyx`` or want to
 recompile ``_rtmidi.cpp`` with a newer Cython version, you'll need to install
 Cython >= 0.17. The ``_rtmidi.cpp`` file in the current source distribution
-(version ${version}) is tagged with:
+(version ${version}) is tagged with::
 
     ${cpp_info}
 
