--- a/setup.cfg
+++ b/setup.cfg
@@ -7,7 +7,7 @@ tag_build = .dev
 # A handy alias to build a release (source and egg)
 release = build filltmpl egg_info -RDb "" sdist --formats=zip,gztar,bztar
 # A handy alias to upload a release to pypi
-release_upload = build filltmpl egg_info -RDb "" sdist --formats=zip,gztar,bztar upload
+release_upload = build filltmpl egg_info -RDb "" sdist --formats=zip,gztar,bztar bdist_wheel upload
 
 [filltmpl]
 templates = INSTALL.rst.in
