--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,12 @@ python:
   - "3.3"
   - "2.7"
 
-# command to install dependencies
+# commands to install dependencies
+before_install:
+  - sudo apt-get update -qq
+  - sudo apt-get install -y libasound-dev
+  - sudo apt-get install -y libjack-dev
+
 install: pip install -r requirements-dev.txt
 
 # command to run tests, e.g. python setup.py test
