--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,23 +1,25 @@
-alabaster==0.7.6
-Babel==1.3
-Cython==0.22.1
+alabaster==0.7.9
+Babel==2.3.4
+Cython==0.24.1
 docutils==0.12
-flake8==2.4.1
-Jinja2==2.7.3
+flake8==3.0.4
+imagesize==0.7.1
+Jinja2==2.8
 MarkupSafe==0.23
-mccabe==0.3.1
-pep257==0.5.0
-pep8==1.5.7
-pluggy==0.3.0
-py==1.4.29
-pyflakes==0.8.1
-Pygments==2.0.2
-pytest==2.7.2
-pytz==2015.4
-six==1.9.0
-snowballstemmer==1.2.0
-Sphinx==1.3.1
-sphinx-rtd-theme==0.1.8
-tox==2.1.1
-virtualenv==13.0.3
-wheel==0.24.0
+mccabe==0.5.2
+pep257==0.7.0
+pep8==1.7.0
+pluggy==0.3.1
+py==1.4.31
+pycodestyle==2.0.0
+pyflakes==1.3.0
+Pygments==2.1.3
+pyliblo==0.9.2
+pytest==3.0.2
+pytz==2016.6.1
+six==1.10.0
+snowballstemmer==1.2.1
+Sphinx==1.4.6
+sphinx-rtd-theme==0.1.9
+tox==2.3.1
+virtualenv==15.0.3
