Add flake8 tox env and configuration
Signed-off-by: Christopher Arndt <chris@chrisarndt.de>

--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,10 @@
 [tox]
-envlist = py27, py33, py34, py35
+envlist = flake8, py27, py33, py34, py35
 
 [testenv]
 commands = py.test -v tests
 deps = -r{toxinidir}/requirements-dev.txt
+
+[testenv:flake8]
+commands = flake8 setup.py {toxinidir}/rtmidi {toxinidir}/examples
+deps = flake8
