--- a/setup.cfg
+++ b/setup.cfg
@@ -19,3 +19,8 @@ all_files  = 1
 
 [upload_sphinx]
 upload-dir = docs/build/html
+
+[flake8]
+ignore = E116, E265, E266, E731
+max-line-length = 100
+exclude = examples/osc2midi/lru_cache.py
