--- a/tox.ini
+++ b/tox.ini
@@ -1,10 +1,11 @@
 [tox]
 envlist = flake8, py27, py33, py34, py35
+skip_missing_interpreters = True
 
 [testenv]
 commands = py.test -v tests
 deps = -r{toxinidir}/requirements-dev.txt
 
 [testenv:flake8]
-commands = flake8 setup.py {toxinidir}/rtmidi {toxinidir}/examples
+commands = flake8 setup.py {toxinidir}/rtmidi {toxinidir}/examples {toxinidir}/tests
 deps = flake8
