--- a/setup.cfg
+++ b/setup.cfg
@@ -24,3 +24,7 @@ upload-dir = docs/build/html
 ignore = E116, E265, E266, E731
 max-line-length = 100
 exclude = examples/osc2midi/lru_cache.py
+
+[pydocstyle]
+match = (?!test_).*\.pyx?
+match_dir = (src|rtmidi)
