--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,5 +1,6 @@
 alabaster==0.7.9
 Babel==2.3.4
+coverage==4.2
 Cython==0.24.1
 docutils==0.12
 flake8==3.0.4
@@ -8,18 +9,18 @@ Jinja2==2.8
 MarkupSafe==0.23
 mccabe==0.5.2
 mock==2.0.0
-pep257==0.7.0
-pep8==1.7.0
-pluggy==0.3.1
+pbr==1.10.0
+pluggy==0.4.0
 py==1.4.31
 pycodestyle==2.0.0
+pydocstyle==1.1.1
 pyflakes==1.3.0
 Pygments==2.1.3
-pytest==3.0.2
-pytz==2016.6.1
+pytest==3.0.3
+pytz==2016.7
 six==1.10.0
 snowballstemmer==1.2.1
-Sphinx==1.4.6
+Sphinx==1.4.8
 sphinx-rtd-theme==0.1.9
 tox==2.3.1
 virtualenv==15.0.3
