Fix typo in doc name
Signed-off-by: Christopher Arndt <chris@chrisarndt.de>

--- a/INSTALL.rst.in
+++ b/INSTALL.rst.in
@@ -151,7 +151,7 @@ for OS X`_ with the full installer.
 Windows
 -------
 
-Please see the detailed instructions for Windows in :doc:`installl-windows`.
+Please see the detailed instructions for Windows in :doc:`install-windows`.
 
 
 User Contributed Documentation
