--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,11 +1,14 @@
 include fill_template.py
-include src/*.cpp src/*.h src/*.pyx
-include *.rst
 include LICENSE.txt
+include Makefile
 include requirements-dev.txt
+include tox.ini
+include *.rst
+include src/*.cpp src/*.h src/*.pyx
 
 exclude *.rst.in
 exclude deploy.sh
+exclude *.sh
 
 graft examples
 graft tests
