Update docmentation links and install from source instructions
Signed-off-by: Christopher Arndt <christopher.arndt@rheinwerk-verlag.de>

--- a/INSTALL.rst.in
+++ b/INSTALL.rst.in
@@ -47,9 +47,9 @@ Of course, you can also download the source distribution package as a Zip
 archive or tarball, extract it and install using the common ``distutils``
 commands, e.g.::
 
-    $ wget ${download_url}python-rtmidi-${version}.tar.gz
-    $ tar -xzf python-rtmidi-${version}.tar.gz
-    $ cd python-rtmidi-${version}
+    $ pip download python-rtmidi
+    $ unzip python-rtmidi-1.1.0.zip
+    $ cd python-rtmidi-1.1.0
     $ python setup.py install
 
 
