Remove 'release_upload' alias from setup.cfg; use twine to upload releases
Signed-off-by: Christopher Arndt <chris@chrisarndt.de>

--- a/setup.cfg
+++ b/setup.cfg
@@ -5,9 +5,7 @@ tag_build = .dev
 
 [aliases]
 # A handy alias to build a release (source and egg)
-release = build filltmpl egg_info -RDb "" sdist --formats=zip,gztar,bztar
-# A handy alias to upload a release to pypi
-release_upload = build filltmpl egg_info -RDb "" sdist --formats=zip,gztar,bztar bdist_wheel upload
+release = build filltmpl egg_info -Db "" sdist --formats=zip,gztar,bztar bdist_wheel
 
 [filltmpl]
 templates = INSTALL.rst.in
