--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,26 +1,37 @@
-alabaster==0.7.9
-Babel==2.3.4
-coverage==4.2
-Cython==0.24.1
-docutils==0.12
-flake8==3.0.4
-imagesize==0.7.1
-Jinja2==2.8
-MarkupSafe==0.23
-mccabe==0.5.2
+alabaster==0.7.11
+atomicwrites==1.1.5
+attrs==18.1.0
+Babel==2.6.0
+certifi==2018.4.16
+chardet==3.0.4
+coverage==4.5.1
+Cython==0.28.5
+docutils==0.14
+flake8==3.5.0
+idna==2.7
+imagesize==1.0.0
+Jinja2==2.10
+MarkupSafe==1.0
+mccabe==0.6.1
 mock==2.0.0
-pbr==1.10.0
-pluggy==0.4.0
-py==1.4.31
-pycodestyle==2.0.0
-pydocstyle==1.1.1
-pyflakes==1.3.0
-Pygments==2.1.3
-pytest==3.0.3
-pytz==2016.7
-six==1.10.0
+more-itertools==4.3.0
+packaging==17.1
+pbr==4.2.0
+pluggy==0.7.1
+py==1.5.4
+pycodestyle==2.3.1
+pydocstyle==2.1.1
+pyflakes==1.6.0
+Pygments==2.2.0
+pyparsing==2.2.0
+pytest==3.7.1
+pytz==2018.5
+requests==2.19.1
+six==1.11.0
 snowballstemmer==1.2.1
-Sphinx==1.4.8
-sphinx-rtd-theme==0.1.9
-tox==2.3.1
-virtualenv==15.0.3
+Sphinx==1.7.6
+sphinx-rtd-theme==0.4.1
+sphinxcontrib-websupport==1.1.0
+tox==3.1.3
+urllib3==1.23
+virtualenv==16.0.0
