--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -7,6 +7,7 @@ include *.rst
 include src/*.cpp src/*.h src/*.pyx
 
 exclude .appveyor.yml
+exclude .travis.yml
 exclude *.rst.in
 exclude deploy.sh
 exclude *.sh
