Clean up makefile
Signed-off-by: Christopher Arndt <chris@chrisarndt.de>

--- a/setup.cfg
+++ b/setup.cfg
@@ -5,7 +5,7 @@ tag_build = .dev
 
 [aliases]
 # A handy alias to build a release (source and egg)
-release = build filltmpl egg_info -Db "" sdist --formats=zip,gztar,bztar bdist_wheel
+release = build filltmpl egg_info -Db "" sdist --formats=zip,gztar bdist_wheel
 
 [filltmpl]
 templates = INSTALL.rst.in
