--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -18,4 +18,4 @@ graft tests
 recursive-exclude * __pycache__
 recursive-exclude * *.py[co]
 
-recursive-include docs *.rst conf.py Makefile make.bat
+recursive-include docs *.rst *.inc conf.py Makefile make.bat
