--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,37 +1,40 @@
-alabaster==0.7.11
-atomicwrites==1.1.5
-attrs==18.1.0
+alabaster==0.7.12
+atomicwrites==1.2.1
+attrs==18.2.0
 Babel==2.6.0
-certifi==2018.4.16
+certifi==2018.11.29
 chardet==3.0.4
-coverage==4.5.1
-Cython==0.28.5
+coverage==4.5.2
+Cython==0.29.2
 docutils==0.14
-flake8==3.5.0
+filelock==3.0.10
+flake8==3.6.0
 idna==2.7
-imagesize==1.0.0
+imagesize==1.1.0
 Jinja2==2.10
-MarkupSafe==1.0
+MarkupSafe==1.1.0
 mccabe==0.6.1
 mock==2.0.0
 more-itertools==4.3.0
-packaging==17.1
-pbr==4.2.0
-pluggy==0.7.1
-py==1.5.4
-pycodestyle==2.3.1
-pydocstyle==2.1.1
-pyflakes==1.6.0
-Pygments==2.2.0
-pyparsing==2.2.0
-pytest==3.7.1
-pytz==2018.5
-requests==2.19.1
-six==1.11.0
+packaging==18.0
+pbr==5.1.1
+pluggy==0.8.0
+py==1.7.0
+pycodestyle==2.4.0
+pydocstyle==3.0.0
+pyflakes==2.0.0
+Pygments==2.3.1
+pyparsing==2.3.0
+pytest==4.0.2
+python-rtmidi==1.2.0
+pytz==2018.7
+requests==2.21.0
+six==1.12.0
 snowballstemmer==1.2.1
-Sphinx==1.7.6
-sphinx-rtd-theme==0.4.1
+Sphinx==1.8.2
+sphinx-rtd-theme==0.4.2
 sphinxcontrib-websupport==1.1.0
-tox==3.1.3
-urllib3==1.23
-virtualenv==16.0.0
+toml==0.10.0
+tox==3.6.0
+urllib3==1.24.1
+virtualenv==16.1.0
