Ignore flake8 W504 warnings
Signed-off-by: Christopher Arndt <chris@chrisarndt.de>

--- a/setup.cfg
+++ b/setup.cfg
@@ -19,7 +19,7 @@ all_files  = 1
 upload-dir = docs/build/html
 
 [flake8]
-ignore = E116, E265, E266, E731
+ignore = E116, E265, E266, E731, W504
 max-line-length = 100
 exclude = examples/osc2midi/lru_cache.py
 
