Update distutils manifest for source distribution
Signed-off-by: Christopher Arndt <chris@chrisarndt.de>

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -12,11 +12,11 @@ include src/rtmidi/RtMidi.h
 exclude .appveyor.yml
 exclude .travis.yml
 exclude *.rst.in
-exclude deploy.sh
-exclude *.sh
 
 graft examples
 graft tests
+
+prune ci
 
 recursive-exclude * __pycache__
 recursive-exclude * *.py[co]
