--- a/.travis.yml
+++ b/.travis.yml
@@ -71,5 +71,6 @@ deploy:
   skip_cleanup: true
   script:
     - ${PYTHON:-python} -m twine upload --skip-existing dist/*.whl
+    - test "$TRAVIS_OS_NAME" = "linux" -a "$TRAVIS_PYTHON_VERSION" = "3.7" && ${PYTHON:-python} -m twine upload dist/*.tar.gz
   on:
     condition: $TRAVIS_TAG =~ ^[0-9]+\.[0-9]+\.[0-9]+$
