--- a/.travis.yml
+++ b/.travis.yml
@@ -73,4 +73,5 @@ deploy:
     - ${PYTHON:-python} -m twine upload --skip-existing dist/*.whl
     - test "$TRAVIS_OS_NAME" = "linux" -a "$TRAVIS_PYTHON_VERSION" = "3.7" && ${PYTHON:-python} -m twine upload dist/*.tar.gz
   on:
+    all_branches: true
     condition: $TRAVIS_TAG =~ ^[0-9]+\.[0-9]+\.[0-9]+$
