--- a/INSTALL.rst.in
+++ b/INSTALL.rst.in
@@ -26,8 +26,8 @@ Cython_ source file ``_rtmidi.pyx``, there is no need to have Cython installed.
 .. note::
     On some Linux distributions, e.g. *Debian*, which support both Python 2 and
     Python 3, pip may installed under the name ``pip2`` resp. ``pip3``. In this
-    case, just ``pip2`` instead of ``pip`` if you're still using Python 2 or
-    ``pip3`` if you are using Python 3 (recommended).
+    case, just ``pip2`` instead of ``pip`` if you're still using Python 2 (not
+    officially supported), or ``pip3`` if you are using Python 3.
 
 python-rtmidi also works well with virtualenv_ and virtualenvwrapper_. If you
 have both installed, creating an isolated environment for testing and/or using
