--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,39 +1,48 @@
 alabaster==0.7.12
-atomicwrites==1.2.1
-attrs==18.2.0
-Babel==2.6.0
-certifi==2018.11.29
+appdirs==1.4.4
+atomicwrites==1.4.0
+attrs==20.2.0
+Babel==2.8.0
+certifi==2020.6.20
 chardet==3.0.4
-coverage==4.5.2
-Cython==0.29.2
-docutils==0.14
-filelock==3.0.10
-flake8==3.6.0
-idna==2.7
-imagesize==1.1.0
-Jinja2==2.10.1
-MarkupSafe==1.1.0
+coverage==5.3
+Cython==0.29.21
+distlib==0.3.1
+docutils==0.16
+filelock==3.0.12
+flake8==3.8.4
+idna==2.8
+imagesize==1.2.0
+iniconfig==1.0.1
+Jinja2==2.11.2
+MarkupSafe==1.1.1
 mccabe==0.6.1
-mock==2.0.0
-more-itertools==4.3.0
-packaging==18.0
-pbr==5.1.1
-pluggy==0.8.0
-py==1.7.0
-pycodestyle==2.4.0
-pydocstyle==3.0.0
-pyflakes==2.0.0
-Pygments==2.3.1
-pyparsing==2.3.0
-pytest==4.0.2
-pytz==2018.7
-requests==2.21.0
-six==1.12.0
-snowballstemmer==1.2.1
-Sphinx==1.8.2
-sphinx-rtd-theme==0.4.2
-sphinxcontrib-websupport==1.1.0
-toml==0.10.0
-tox==3.6.0
-urllib3==1.24.2
-virtualenv==16.1.0
+mock==4.0.2
+more-itertools==8.5.0
+packaging==20.4
+pbr==5.5.0
+pluggy==0.13.1
+py==1.9.0
+pycodestyle==2.6.0
+pydocstyle==5.1.1
+pyflakes==2.2.0
+Pygments==2.7.1
+pyparsing==2.4.7
+pytest==6.1.1
+pytz==2020.1
+requests==2.24.0
+six==1.15.0
+snowballstemmer==2.0.0
+Sphinx==3.2.1
+sphinxcontrib-applehelp==1.0.2
+sphinxcontrib-devhelp==1.0.2
+sphinxcontrib-htmlhelp==1.0.3
+sphinxcontrib-jsmath==1.0.1
+sphinxcontrib-qthelp==1.0.3
+sphinxcontrib-serializinghtml==1.1.4
+sphinxcontrib-websupport==1.2.4
+sphinx-rtd-theme==0.5.0
+toml==0.10.1
+tox==3.20.0
+urllib3==1.25.10
+virtualenv==20.0.33
