Remove references to old project homepage URL and fix readme badges
Signed-off-by: Christopher Arndt <chris@chrisarndt.de>

--- a/setup.cfg
+++ b/setup.cfg
@@ -35,8 +35,19 @@ match_dir = (src|rtmidi)
 
 
 [metadata]
+name = python-rtmidi
+description = A Python binding for the RtMidi C++ library implemented using Cython.
 author = Christopher Arndt
 author_email = chris@chrisarndt.de
+license = MIT License
+long_description = file: README.rst
+url = https://github.com/SpotlightKid/python-rtmidi
+download_url = https://pypi.python.org/pypi/python-rtmidi
+repository = https://github.com/SpotlightKid/python-rtmidi.git
+keywords =
+    midi
+    music
+    rtmidi
 classifiers =
     Development Status :: 5 - Production/Stable
     Environment :: MacOS X
@@ -55,19 +66,6 @@ classifiers =
     Programming Language :: Python :: 3.9
     Topic :: Multimedia :: Sound/Audio :: MIDI
     Topic :: Software Development :: Libraries :: Python Modules
-description = A Python binding for the RtMidi C++ library implemented using Cython.
-download_url = https://pypi.python.org/pypi/python-rtmidi
-keywords =
-    midi
-    music
-    rtmidi
-license = MIT License
-long_description = file: README.rst
-
-
-name = python-rtmidi
-repository = https://github.com/SpotlightKid/python-rtmidi.git
-url = https://chrisarndt.de/projects/python-rtmidi
 
 
 [options]
