--- a/.travis.yml
+++ b/.travis.yml
@@ -59,7 +59,7 @@ matrix:
     - name: "Python 3.9 (Linux)"
       os: linux
       dist: bionic
-      python: "3.9-dev"
+      python: "3.9"
 
 git:
   depth: 1
