--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -11,7 +11,11 @@ environment:
     - PYTHON: Python38
     - PYTHON: Python38-x64
     - PYTHON: Python39
+      ARCHITECTURE: x86
+      APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2019
     - PYTHON: Python39-x64
+      ARCHITECTURE: x64
+      APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
 
 # To clear the cache, see https://ci.appveyor.com/api-keys for the token and use:
 # wget --header="Authorization: Bearer $TOKEN" --method DELETE https://ci.appveyor.com/api/projects/$USER/$PROJECT/buildcache
