--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -26,17 +26,17 @@ clone_depth: 1
 
 install:
   - "SET PATH=C:\\%PYTHON%;C:\\%PYTHON%\\Scripts;%PATH%"
-  - "%PYTHON%\python.exe --version"
-  - "%PYTHON%\python.exe -m pip --disable-pip-version-check install -U pip setuptools wheel"
-  - "%PYTHON%\python.exe -m pip install -U Cython twine"
-  - "%PYTHON%\python.exe -m pip freeze --all"
+  - 'C:\%PYTHON%\python.exe --version'
+  - 'C:\%PYTHON%\python.exe -m pip --disable-pip-version-check install -U pip setuptools wheel'
+  - 'C:\%PYTHON%\python.exe -m pip install -U Cython twine'
+  - 'C:\%PYTHON%\python.exe -m pip freeze --all'
 
 before_build:
   - git submodule update --init
 
 build_script:
   - ps: $env:SOURCE_DATE_EPOCH = (git log -1 --date=unix --format='format:%ct' rtmidi/release.py) | Out-String
-  - "%PYTHON%\python.exe setup.py release"
+  - 'C:\%PYTHON%\python.exe setup.py release'
 
 test: off
 
