fix content type

--- a/setup.cfg
+++ b/setup.cfg
@@ -41,6 +41,7 @@ author = Christopher Arndt
 author_email = chris@chrisarndt.de
 license = MIT License
 long_description = file: README.rst
+long_description_content_type = text/x-rst
 url = https://github.com/SpotlightKid/python-rtmidi
 download_url = https://pypi.python.org/pypi/python-rtmidi
 repository = https://github.com/SpotlightKid/python-rtmidi.git
