feat: switch to meson / mesonpep517 build system
Signed-off-by: Christopher Arndt <chris@chrisarndt.de>

--- a/.gitignore
+++ b/.gitignore
@@ -8,14 +8,10 @@ src/_rtmidi.cpp
 # C extensions
 *.so
 
-# Generated documentation
-#INSTALL.rst
-
 # Packages
 *.egg
 *.egg-info
 dist/
-build/
 *.eggs/
 eggs/
 parts/
@@ -49,6 +45,8 @@ output/*/index.html
 
 # Sphinx
 docs/_build
+# docs build artifact
+rtmidi/version.py
 
 # Geany project
 python-rtmidi.geany
