feat: remove travis and Appveyor CI setup
Signed-off-by: Christopher Arndt <chris@chrisarndt.de>

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -7,15 +7,13 @@ include src/rtmidi/RtMidi.cpp
 include src/rtmidi/RtMidi.h
 include tox.ini
 
-exclude .appveyor.yml
 exclude .gitignore
 exclude .gitmodules
-exclude .travis.yml
 
 graft examples
 graft tests
 
-prune ci
+prune .github
 
 recursive-exclude * __pycache__
 recursive-exclude * *.py[co]
